--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .main-style {
+        @apply text-2xl;
+    }
+
+    .styled-button {
+        @apply bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded;
+    }
+}
