--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,12 @@
     .styled-button {
         @apply bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded;
     }
+
+    .menu-icon {
+        @apply relative m-1 bg-blue-500 rounded-xl hover:rounded shadow-md transition-all;
+    }
+
+    .menu-tooltip {
+        @apply scale-0 absolute left-16 top-1 text-left bg-blue-900 text-white p-1 pl-2 pr-2 rounded-lg shadow-md transition-all;
+    }
 }
