--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,12 @@
         @apply bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded;
     }
 
+    .menu-bar {
+        @apply fixed top-0 left-0 h-screen w-16 flex flex-col bg-blue-900;
+    }
+
     .menu-icon {
-        @apply relative m-1 bg-blue-500 rounded-xl hover:rounded shadow-md transition-all;
+        @apply relative m-2 mb-1 p-2 bg-blue-500 rounded-xl hover:rounded shadow-md transition-all;
     }
 
     .menu-tooltip {
