--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
         @apply bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded;
     }
 
+    /* menu bars */
     .menu-bar {
         @apply fixed top-0 left-0 h-screen w-16 flex flex-col bg-blue-900;
     }
@@ -21,5 +22,13 @@
 
     .menu-tooltip {
         @apply scale-0 absolute left-16 top-1 text-left bg-blue-900 text-white p-1 pl-2 pr-2 rounded-lg shadow-md transition-all;
+    }
+
+    /* popups*/
+    .cover {
+        @apply fixed flex flex-col justify-center left-0 top-0 w-full h-full bg-black/70 transition-all;
+    }
+    .popup {
+        @apply bg-gray-100 h-1/2 w-2/3 self-center transition-all;
     }
 }
