--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,21 @@
 @tailwind utilities;
 
 @layer components {
-    .main-style {
-        @apply text-2xl;
+    .main-content {
+        @apply pl-16 text-2xl;
     }
 
     .styled-button {
         @apply bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded;
+    }
+
+    /* tiles */
+    .tiles-container {
+        @apply flex flex-wrap justify-between;
+    }
+
+    .tile-container {
+        @apply flex-grow m-3 w-[40%] h-[20rem] text-white dark:text-black font-bold transition-all
     }
 
     /* menu bars */
