--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,11 @@
     }
 
     .tile-container {
-        @apply flex-grow m-3 w-[40%] h-[20rem] text-white dark:text-black font-bold transition-all
+        @apply flex justify-center items-center flex-grow m-3 w-[40%] h-[20rem] rounded-2xl bg-gradient-to-t text-white dark:text-black font-bold transition-all
+    }
+
+    .tile-container-new {
+        @apply h-2;
     }
 
     /* menu bars */
