--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .main-content {
-        @apply pl-16 text-2xl;
+        @apply pl-16 text-2xl m-3;
     }
 
     .styled-button {
@@ -16,8 +16,9 @@
         @apply flex flex-wrap justify-between;
     }
 
+    /* TODO: migrate to css grid, because flex is giving me a headache */
     .tile-container {
-        @apply flex justify-center items-center flex-grow m-3 w-[40%] h-[20rem] rounded-2xl bg-gradient-to-t text-white dark:text-black font-bold transition-all
+        @apply flex justify-center items-center flex-grow m-2 min-w-[40%] h-[20rem] text-center rounded-2xl bg-gradient-to-t text-white dark:text-black font-bold transition-all
     }
 
     .tile-container-new {
@@ -30,7 +31,7 @@
     }
 
     .menu-icon {
-        @apply relative m-2 mb-1 p-2 bg-blue-500 rounded-xl hover:rounded shadow-md transition-all;
+        @apply relative m-2 mb-1 p-2 bg-blue-500 rounded-xl hover:rounded shadow-md transition-all text-center;
     }
 
     .menu-tooltip {
